fixed alignment on buttons for edit and delete

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -19,3 +19,7 @@ body {
 .text-recipe{
   background: white;
 }
+
+.btn{
+  margin-top: 15px;
+}
